--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
             font-family: "poppins", sans-serif;
         }
 
+        html, body {
+        overflow-x: hidden;
+        }
+
         body {
             background: #ffffff;
             color: #111
@@ -76,8 +80,9 @@
         }
 
         .hero-img img {
-            width: 450px;
-            height: 450px;
+            width: 100%;
+            max-width: 450px;
+            height: auto;
             object-fit: cover;
             border-radius: 90%;
         }
